--- a/index.html
+++ b/index.html
@@ -48,10 +48,9 @@
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Priscilla Glenn, Ph.D</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
+          <a href="https://twitter.com/thewheatgrad" class="twitter"><i class="bx bxl-twitter"></i></a>
+          <a href="mailto:priscilla_glenn@outlook.com"><i class="bx bxl-gmail"></i></a>
+          <!--a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
           <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
@@ -61,11 +60,25 @@
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#Education" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Education</span></a></li>
+          <li><a href="#Research" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Research</span></a></li>
+          <li><a href="#Publications" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Publications</span></a></li>
+          <li><a href="#Skills" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Skills</span></a></li>
+          <li hidden><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Skills2</span></a></li>
+
+        </ul>
+      </nav><!-- .nav-menu -->
+
+<!--
+      <nav id="navbar" class="nav-menu navbar">
+        <ul>
+          <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
+          <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
+          <li><a href="#Education" class="nav-link scrollto"><i class="bx bx-user"></i> <span>Education</span></a></li>
           <li><a href="#Research" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Research</span></a></li>
           <li><a href="#Publications" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Publications</span></a></li>
-
-          <li><a href="#Skills" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Skills</span></a></li>
+		  <li><a href="#Skills" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Skills</span></a></li>
           <li><a href="#Presentations" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Presentations</span></a></li>
+          <li></li>
         </ul>
       </nav><!-- .nav-menu -->
     </div>
@@ -87,7 +100,7 @@
 
         <div class="section-title">
           <h2>About - Plant Geneticist/Agronomist</h2>
-          <p>Hi, my name is Dr. Priscilla Glenn and I am currently a Post-doc in the Blackmon Lab at Texas A&M University studying sex chromosome evolution and striving to improve my bioinformatic abilities. 
+          <p>Hi, my name is Dr. Priscilla Glenn and I am currently a Post-doc in the Blackmon Lab at Texas A&M University researching sex chromosome evolution and striving to improve my bioinformatic abilities. 
 		  I graduated with my doctorate from UC Davis and my research focused on identifying and incorporating alleles to improve wheat yield.
 		   I desire to uncover the connection between genetic variation, desirable phenotypic traits, and varying field environments. 
 			  Utilizing both tradition breeding methods and genomic selection, I am driven to apply these traits to advance genetic gain and phenotypic improvements to suit the grower’s needs. 
@@ -125,31 +138,47 @@
     </section><!-- End About Section -->
 
      <!-- ======= Education Section ======= -->
-    <section id="Education" class="education">
+    <section id="Education" class="Resume">
       <div class="container">
 
         <div class="section-title">
           <h2>Education</h2>
         </div>
-        <div class="row">        
-            <div class="education-item">
-              <h4><strong>2022</strong></h4> 
-			  <h3>Doctorate of Horticulture &amp; Agronomy</h3>
-              <p><em>University of California at Davis, Davis, CA</em><br> GPA 3.93/4.0</p>		  
-              <p> <strong> Classes: </strong> MGT 290/298 - Food & Ag Industry Immersion/Exposure, PLS 222 - Advanced Plant Breeding, BIT 160 - Plant Biotechnology, GGG 201D - Quant & Population Genetics, PLS 220 - Genomics & Plant Biotech, PLS 222 - Advanced Plant Breeding,
-			  PLB 111 - Plant Physiology, PBI 220 - Plant Development, GGG 201B – Genomics, HRT 200 A/B - Hort & Agron: Principles/Practices, SSC 100 - Principles Soil Sci </p>
-            </div>
-			<p></p>
-			<p></p>
-            <div class="education-item">
-              <h4><strong>2017</strong></h4>
-			  <h3>Bachelor of Biology & Chemistry Minor</h3>
-              <p><em>University of Texas at Arlington, Arlington, TX</em> <br> Graduated <em> Summa cum laude </em> <br> GPA 3.92/4.0
-			  </p>
-			  </div>
+		
+        <div class="row">
+          <div class="col-lg-1" data-aos="fade-right">
+		  <br>
+            <image class="img-fluid" src="/assets/img/icons/UCD.png" height = 100px >
           </div>
+          <div class="col-lg-11 pt-4 pt-lg-0 content" data-aos="fade-left">
+            <div class="row margin" padding-left = 100px>
+				  <h4><strong>2022</strong></h4> 
+				  <h3>Doctorate of Horticulture &amp; Agronomy</h3>
+				  <p><em>University of California at Davis, Davis, CA</em><br> GPA 3.93/4.0</p>		  
+				  <p> <strong> Classes: </strong> MGT 290/298 - Food & Ag Industry Immersion/Exposure, PLS 222 - Advanced Plant Breeding, BIT 160 - Plant Biotechnology, GGG 201D - Quant & Population Genetics, PLS 220 - Genomics & Plant Biotech, PLS 222 - Advanced Plant Breeding,
+				  PLB 111 - Plant Physiology, PBI 220 - Plant Development, GGG 201B – Genomics, HRT 200 A/B - Hort & Agron: Principles/Practices, SSC 100 - Principles Soil Sci 
+				  </p>				
+            </div>
+           </div>
+		   <br>
+		   </br>
+          <div class="col-lg-1" data-aos="fade-right">
+		  <br>
+		  <p></p>
+            <image class="img-fluid" src="/assets/img/icons/UTA.png" height = 100px >
+          </div>
+          <div class="col-lg-11 pt-4 pt-lg-0 content" data-aos="fade-left">
+				<div class="row margin" padding-left = 100px>				   
+				  <h4><strong>2017</strong></h4>
+				  <h3>Bachelor of Biology & Chemistry Minor</h3>
+				  <p><em>University of Texas at Arlington, Arlington, TX</em> <br> Graduated <em> Summa cum laude </em> <br> GPA 3.92/4.0
+				  </p>		
+            </div>
+           </div>
         </div>
-    </section><!-- End Education Section -->
+	</section>
+
+	<!-- End Education Section -->
 
 
 
@@ -170,7 +199,6 @@
 			Comparing mammalian PAR size and aneuploidy rates. </p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
-            <!--div class="icon"><i class="bi bi-card-checklist"></i></div-->
 			<image class="icon" src="/assets/img/icons/wheat.png"/>
             <h4 class="title">FT-A2 (2017-2022)</h4>
             <p class="description">Improved wheat yield potential by identifying, characterizing, and incorporating an 
@@ -240,7 +268,110 @@
 
         </div>
 
-    </section><!-- End Facts Section -->
+    </section><!-- End Publications Section -->
+	
+	<!-- ======= Skills Section ======= -->
+    <section id="Skills" class="skills">
+      <div class="container">
+	  
+	    <div class="section-title">
+          <h2>Skills</h2>
+	    </div>
+		
+        <div class="row margin content" data-aos="fade-in">
+		<h4> <b> Wet-Lab </b> </h4>
+              <div class="col-lg-4">
+                <ul>
+                  <li><i class="bi bi-chevron-right"></i> Traditional & molecular breeding </li>
+                  <li><i class="bi bi-chevron-right"></i> Experimental design and analysis<br> (lab, greenhouse & field)</li>
+                  <li><i class="bi bi-chevron-right"></i> Trait Introgression </li>
+				  <li><i class="bi bi-chevron-right"></i> DNA & RNA extraction </li>
+                </ul>
+              </div>
+              <div class="col-lg-4">
+                <ul>
+                  <li><i class="bi bi-chevron-right"></i> Illumina/NGS library prep</li>
+                  <li><i class="bi bi-chevron-right"></i> PRC & real time PCR</li>
+                  <li><i class="bi bi-chevron-right"></i> Marker primer assay design/ optimization</li>
+				  <li><i class="bi bi-chevron-right"></i> Sequencing </li>
+                </ul>
+              </div>
+			  <div class="col-lg-4">
+                <ul>
+                  <li><i class="bi bi-chevron-right"></i> Direct Yeast 2 hybrid</li>
+                  <li><i class="bi bi-chevron-right"></i> Gateway cloning</span></li>
+                  <li><i class="bi bi-chevron-right"></i> In situ preparation</li>
+				  <li><i class="bi bi-chevron-right"></i> Gel extraction </li>
+			   </ul>
+			  </div>
+            <p></p>
+		<h4> <b> Computational </b> </h4>         
+              <div class="col-lg-4">
+                <ul>
+                  <li><i class="bi bi-chevron-right"></i> R & RStudio - advanced </li>
+                  <li><i class="bi bi-chevron-right"></i> Python - intermediate </li>
+                  <li><i class="bi bi-chevron-right"></i> Perl - beginner </li>
+                </ul>
+              </div>
+              <div class="col-lg-4">
+                <ul>
+                  <li><i class="bi bi-chevron-right"></i> Phylogenetic analysis</li>
+                  <li><i class="bi bi-chevron-right"></i> Mesquite</li>
+				  <li><i class="bi bi-chevron-right"></i> MrBayes </li>
+                </ul>
+              </div>
+			  <div class="col-lg-4">
+                <ul>
+				  <li><i class="bi bi-chevron-right"></i> Microsoft Office </li>			
+                  <li><i class="bi bi-chevron-right"></i> Adobe Illustrator</li>
+                  <li><i class="bi bi-chevron-right"></i> Adobe Photoshop</span></li>
+			   </ul>
+			  </div> 
+			<p></p>  
+		<h4> <b> Soft </b> </h4>           
+              <div class="col-lg-4">
+                <ul>
+                  <li><i class="bi bi-chevron-right"></i> Oral & written communication </li>
+                  <li><i class="bi bi-chevron-right"></i> Conflict management </li>
+                  <li><i class="bi bi-chevron-right"></i> Manuscript writing </li>
+                </ul>
+              </div>
+              <div class="col-lg-4">
+                <ul>
+                  <li><i class="bi bi-chevron-right"></i> Leadership</li>
+                  <li><i class="bi bi-chevron-right"></i> Task delegation</li>
+				  <li><i class="bi bi-chevron-right"></i> Team management </li>
+                </ul>
+              </div>
+			  <div class="col-lg-4">
+                <ul>
+				  <li><i class="bi bi-chevron-right"></i> Time management </li>			
+                  <li><i class="bi bi-chevron-right"></i> Mentoring</li>
+                  <li><i class="bi bi-chevron-right"></i> Public speaking</span></li>
+			   </ul>
+			  </div>
+        </div>			
+			
+      </div>
+    </section><!-- End Skills Section -->
+
+    <!-- ======= Contact Section ======= -->
+    <section id="contact" class="contact">
+      <div class="container content" hidden>
+
+        <div class="section-title content">
+          <h2>Skills2</h2>
+          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        </div>
+
+		<div class="row margin content" data-aos="fade-in">                    
+        </div>
+
+      </div>
+    </section><!-- End Contact Section -->
+
+
+
 
   </main><!-- End #main -->
 
