Lots of updates

--- a/index.html
+++ b/index.html
@@ -147,11 +147,11 @@
 		
         <div class="row">
           <div class="col-lg-1" data-aos="fade-right">
-		  <br>
-            <image class="img-fluid" src="/assets/img/icons/UCD.png" height = 100px >
+		  <br> 
+            <image class="w3-image" src="/assets/img/icons/UCD.png" style="max-width:100px">
           </div>
           <div class="col-lg-11 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <div class="row margin" padding-left = 100px>
+            <div class="row margin" style="padding-left:20px">
 				  <h4><strong>2022</strong></h4> 
 				  <h3>Doctorate of Horticulture &amp; Agronomy</h3>
 				  <p><em>University of California at Davis, Davis, CA</em><br> GPA 3.93/4.0</p>		  
@@ -165,10 +165,10 @@
           <div class="col-lg-1" data-aos="fade-right">
 		  <br>
 		  <p></p>
-            <image class="img-fluid" src="/assets/img/icons/UTA.png" height = 100px >
+            <image class="w3-image" src="/assets/img/icons/UTA.png" style="max-width:100px">
           </div>
           <div class="col-lg-11 pt-4 pt-lg-0 content" data-aos="fade-left">
-				<div class="row margin" padding-left = 100px>				   
+				<div class="row margin" style="padding-left:20px">				   
 				  <h4><strong>2017</strong></h4>
 				  <h3>Bachelor of Biology & Chemistry Minor</h3>
 				  <p><em>University of Texas at Arlington, Arlington, TX</em> <br> Graduated <em> Summa cum laude </em> <br> GPA 3.92/4.0
@@ -249,7 +249,10 @@
         <div class="section-title">
           <h2>Publications</h2>
 		  <p>
-		  <a = href="https://scholar.google.com/citations?hl=en&user=bZrCKpYAAAAJ" target="_blank"> Google Scholar </a>
+		  
+		  <a = href="https://scholar.google.com/citations?hl=en&user=bZrCKpYAAAAJ" target="_blank">
+		  <image class="w3-image" src="/assets/img/icons/google-scholar.png" style="max-width:50px">
+		  Google Scholar </a>
 		  </p>
         </div>
 		
@@ -304,7 +307,8 @@
 				  <li><i class="bi bi-chevron-right"></i> Gel extraction </li>
 			   </ul>
 			  </div>
-            <p></p>
+            <hr class="greenhr"/>
+			<br/>
 		<h4> <b> Computational </b> </h4>         
               <div class="col-lg-4">
                 <ul>
@@ -322,12 +326,13 @@
               </div>
 			  <div class="col-lg-4">
                 <ul>
-				  <li><i class="bi bi-chevron-right"></i> Microsoft Office </li>			
+				  <li><i class="bi bi-chevron-right"></i> Microsoft Excel </li>			
                   <li><i class="bi bi-chevron-right"></i> Adobe Illustrator</li>
                   <li><i class="bi bi-chevron-right"></i> Adobe Photoshop</span></li>
 			   </ul>
 			  </div> 
-			<p></p>  
+			<hr class="greenhr"/>
+			<br/>
 		<h4> <b> Soft </b> </h4>           
               <div class="col-lg-4">
                 <ul>
