--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 				  <h3>Doctorate of Horticulture &amp; Agronomy</h3>
 				  <p><em>University of California at Davis, Davis, CA</em><br> GPA 3.93/4.0</p>		  
 				  <p> <strong> Classes: </strong> MGT 290/298 - Food & Ag Industry Immersion/Exposure, PLS 222 - Advanced Plant Breeding, BIT 160 - Plant Biotechnology, GGG 201D - Quant & Population Genetics, PLS 220 - Genomics & Plant Biotech, PLS 222 - Advanced Plant Breeding,
-				  PLB 111 - Plant Physiology, PBI 220 - Plant Development, GGG 201B – Genomics, HRT 200 A/B - Hort & Agron: Principles/Practices, SSC 100 - Principles Soil Sci 
+				  PLB 111 - Plant Physiology, PBI 220 - Plant Development, GGG 201B – Genomics, HRT 200 A/B - Hort & Agron: Principles/Practices, SSC 100 - Principles Soil Sci <br>
 				  </p>				
             </div>
            </div>
@@ -250,7 +250,7 @@
 		  <p>
 		  
 		  <a = href="https://scholar.google.com/citations?hl=en&user=bZrCKpYAAAAJ" target="_blank">
-		  <image class="w3-image" src="/assets/img/icons/google-scholar.png" style="max-width:50px">
+		  <image class="w3-image" src="/assets/img/icons/google-scholar.png" style="max-width:50px" data-aos="fade-up">
 		  Google Scholar </a>
 		  </p>
         </div>
