Google scholar update

--- a/index.html
+++ b/index.html
@@ -249,9 +249,9 @@
           <h2>Publications</h2>
 		  <p>
 		  
-		  <a = href="https://scholar.google.com/citations?hl=en&user=bZrCKpYAAAAJ" target="_blank">
-		  <image class="w3-image" src="/assets/img/icons/google-scholar.png" style="max-width:50px" data-aos="fade-up">
-		  Google Scholar </a>
+		  <a = href="https://scholar.google.com/citations?user=FIDQHX0AAAAJ&hl=en" target="_blank" >
+		  <image class="w3-image" src="/assets/img/icons/google-scholar.png" style="max-width:50px; filter: hue-rotate(230deg);" data-aos="fade-up">
+		  <label data-aos="fade-up" class="aos-animate">Google Scholar</label> </a>
 		  </p>
         </div>
 		
@@ -282,7 +282,7 @@
 		
         <div class="row margin content" data-aos="fade-in">
 		<h4> <b> Wet-Lab </b> </h4>
-              <div class="col-lg-4">
+              <div class="col-lg-4" >
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> Traditional & molecular breeding </li>
                   <li><i class="bi bi-chevron-right"></i> Experimental design and analysis<br> (lab, greenhouse & field)</li>
