--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="social-links mt-3 text-center">
           <a href="https://twitter.com/thewheatgrad" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="mailto:priscilla_glenn@outlook.com"><i class="bx bxl-gmail"></i></a>
-          <!--a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
+          <a href="https://github.com/priscilla-glenn"><i class="bx bxl-github"></i></a>
           <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
