Linkedin link added

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <a href="https://twitter.com/thewheatgrad" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="mailto:priscilla_glenn@outlook.com"><i class="bx bxl-gmail"></i></a>
           <a href="https://github.com/priscilla-glenn"><i class="bx bxl-github"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/priscilla-d-glenn/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
