--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 			<image class="icon" src="/assets/img/icons/wheat.png"/>
             <h4 class="title">FT-A2 (2017-2022)</h4>
             <p class="description">Improved wheat yield potential by identifying, characterizing, and incorporating an 
-			FT2 allele for increased grain number.</p>
+			<i>FT2</i> allele for increased grain number.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
             <image class="icon" src="/assets/img/icons/dna1.png"/>
@@ -224,12 +224,12 @@
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
             <image class="icon" src="/assets/img/icons/beetle-shell.png"/>
             <h4 class="title">MSCI (2014-2017)</h4>
-            <p class="description">Analyzed gene expression data from Tribolium beetles to determine if it supports meiotic sex chromosome inactivation</p>
+            <p class="description">Analyzed gene expression data from <i>Tribolium</i> beetles to determine if it supports meiotic sex chromosome inactivation</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
             <image class="icon" src="/assets/img/icons/fire.png"/> 
             <h4 class="title">Fire Blight (Summer 2016)</h4>
-            <p class="description">Determined if Fire Blight was attractive to D. Melanogaster and 
+            <p class="description">Determined if Fire Blight was attractive to <i>D. Melanogaster</i> and 
 			set up procedure for future experiments for other potential FB vectors</p>
           </div>
 		  <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
