--- a/index.html
+++ b/index.html
@@ -259,14 +259,17 @@
 		
         <div class="row no-gutters">
           <div class="align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
-		  <p> 1) <b> Glenn, P., </b> Zhang, J., Brown-Guedira, G., Dewitt, N., Cook, J. P., Li, K., Akhunov, E., & Dubcovsky, J. (2022). 
-		  Identification and characterization of a natural polymorphism in FT-A2 associated with increased number of grains per spike in wheat. 
-		  <i> Theoretical and Applied Genetics </i>, 135, 679–692. <a href="https://doi.org/10.1007/s00122-021-03992-y" target="_blank"> 
+		  <p> 1) <b>Glenn P,</b> Zhang J, Brown-Guedira G, Dewitt N, Cook JP, Li K, Akhunov E, & Dubcovsky J. (2022). 
+		  Identification and characterization of a natural polymorphism in <i> FT-A2 </i> associated with increased number of grains per spike in wheat. 
+		  <i> Theoretical and Applied Genetics, 135, </i> 679–692. <a href="https://doi.org/10.1007/s00122-021-03992-y" target="_blank">
 		  https://doi.org/10.1007/s00122-021-03992-y </a> 
 		  </p>
-		  <p> 2) <b> Glenn, P., </b> Woods, D., Zhang, J., Odle, Natalie., Dubcovsky, J. 
-		  Identification of bZIPC1 as a protein interactor of FT2 that affects spikelet number per spike in wheat. 
-		  (in prep, <i> New Phytologist</i> )</p>
+		  <p> 2) <b>Glenn P,</b> Hjelmen CJ, Gafford-Gaby RD, Shum A, Blackmon H. (2023). The fitness of the rare sex is destined to decline.
+		  (in prep, PNAS)
+		  </p>
+		  <p> 3) <b>Glenn P,</b> Woods D, Zhang J, Huiqiong L, Gilad G, Odle N, and Dubcovsky J.
+		  Wheat bZIPC1 interacts with FT2 and contributes to the regulation of spikelet number per spike. (submitted, Theoretical & Applied Genetics)
+		  </p>
             </div>
           </div>
 
