--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Dr. Priscilla Glenn</title>
+  <title>Priscilla Glenn, Ph.D</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -105,8 +105,9 @@
 		   I desire to uncover the connection between genetic variation, desirable phenotypic traits, and varying field environments. 
 			  Utilizing both tradition breeding methods and genomic selection, I am driven to apply these traits to advance genetic gain and phenotypic improvements to suit the grower’s needs. 
 			  After my postdoc, I am interested in working in the seed industry in a position which combines genetics, breeding, and/or field work. 
-
-		  
+		  </p>
+		  <p> To read more about my jounrey into agriculture, read <a href="https://hortaggradstudents.ucdavis.edu/news/PBCNewsletter-2020-December" target="_blank">
+		  THIS </a> article from the UC Davis Plant Breeding Center."
 		  </p>
         </div>
 
@@ -259,17 +260,19 @@
 		
         <div class="row no-gutters">
           <div class="align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
-		  <p> 1) <b>Glenn P,</b> Zhang J, Brown-Guedira G, Dewitt N, Cook JP, Li K, Akhunov E, & Dubcovsky J. (2022). 
+		  <p> 1) <b>Glenn P,</b> Woods DP, Zhang J, Gabay G, Odle N, Dubcovsky J. (2023)
+		  Wheat bZIPC1 interacts with FT2 and contributes to the regulation of spikelet number per spike. <i> Theoretical and Applied Genetics, 136, </i> 237. 
+		  <a href="https://doi.org/10.1007/s00122-023-04484-x" target="_blank"> https://doi.org/10.1007/s00122-023-04484-x </a>
+		  </p>
+		  <p> 2) <b>Glenn P,</b> Zhang J, Brown-Guedira G, Dewitt N, Cook JP, Li K, Akhunov E, Dubcovsky J. (2022). 
 		  Identification and characterization of a natural polymorphism in <i> FT-A2 </i> associated with increased number of grains per spike in wheat. 
 		  <i> Theoretical and Applied Genetics, 135, </i> 679–692. <a href="https://doi.org/10.1007/s00122-021-03992-y" target="_blank">
 		  https://doi.org/10.1007/s00122-021-03992-y </a> 
 		  </p>
-		  <p> 2) <b>Glenn P,</b> Hjelmen CJ, Gafford-Gaby RD, Shum A, Blackmon H. (2023). The fitness of the rare sex is destined to decline.
+		  <p> 3) <b>Glenn P,</b> Hjelmen CJ, Gafford-Gaby RD, Shum A, Blackmon H. (2023). The fitness of the rare sex is destined to decline.
 		  (in prep, PNAS)
 		  </p>
-		  <p> 3) <b>Glenn P,</b> Woods D, Zhang J, Huiqiong L, Gilad G, Odle N, and Dubcovsky J.
-		  Wheat bZIPC1 interacts with FT2 and contributes to the regulation of spikelet number per spike. (submitted, Theoretical & Applied Genetics)
-		  </p>
+		  
             </div>
           </div>
 
