--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 			  Utilizing both tradition breeding methods and genomic selection, I am driven to apply these traits to advance genetic gain and phenotypic improvements to suit the grower’s needs. 
 			  After my postdoc, I am interested in working in the seed industry in a position which combines genetics, breeding, and/or field work. 
 		  </p>
-		  <p> </p> 
+		  <div> </div>
 		  <p> To read more about my journey into agriculture, check out <b> <a href="https://hortaggradstudents.ucdavis.edu/news/PBCNewsletter-2020-December" target="_blank">
 		  THIS </a> </b> article from the UC Davis Plant Breeding Center."
 		  </p>
