--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
         <div class="row">
           <div class="col-lg-3" data-aos="fade-right">
-            <img src="assets/img/About-img.jpg" class="img-fluid" alt="">
+            <img src="assets/img/About-img2.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-9 pt-4 pt-lg-0 content" data-aos="fade-left">
             <div class="row margin">
