--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
         <div class="section-title">
           <h2>About - Plant Geneticist/Agronomist</h2>
-          <p>Hi, my name is Dr. Priscilla Glenn and I am currently a Post-doc in the Blackmon Lab at Texas A&M University researching sex chromosome evolution and striving to improve my bioinformatic abilities. 
+          <p>Hi, my name is Dr. Priscilla Glenn and I am currently a Post-doc in the Blackmon Lab at Texas A&M University researching aneuploidy and fitness and striving to improve my bioinformatic abilities. 
 		  I graduated with my doctorate from UC Davis and my research focused on identifying and incorporating alleles to improve wheat yield.
 		   I desire to uncover the connection between genetic variation, desirable phenotypic traits, and varying field environments. 
 			  Utilizing both tradition breeding methods and genomic selection, I am driven to apply these traits to advance genetic gain and phenotypic improvements to suit the grower’s needs. 
@@ -114,7 +114,7 @@
 
         <div class="row">
           <div class="col-lg-3" data-aos="fade-right">
-            <img src="assets/img/About-img2.jpg" class="img-fluid" alt="">
+            <img src="assets/img/About-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-9 pt-4 pt-lg-0 content" data-aos="fade-left">
             <div class="row margin">
@@ -198,8 +198,8 @@
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
             <image class="icon" src="/assets/img/icons/dna2.png"/>
             <h4 class="title">Chromsome Evolution (2023-Present)</h4>
-            <p class="description">Utilizing HiFi sequence data to assemble various beetle genomes for Synteny analysis.
-			Comparing mammalian PAR size and aneuploidy rates. </p>
+            <p class="description">Comparing mammalian PAR size and aneuploidy rates. Simulating impact of drift and selection among populations with skewed sex ratios. 
+			</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
 			<image class="icon" src="/assets/img/icons/wheat.png"/>
