--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 		  </p>
 		  <br> </br>
 		  <p> To read more about my journey into agriculture, check out <b> <a href="https://hortaggradstudents.ucdavis.edu/news/PBCNewsletter-2020-December" target="_blank">
-		  THIS </a> </b> article from the UC Davis Plant Breeding Center."
+		  THIS </a> </b> article from the UC Davis Plant Breeding Center.
 		  </p>
         </div>
 
@@ -197,7 +197,7 @@
         <div class="row">
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
             <image class="icon" src="/assets/img/icons/dna2.png"/>
-            <h4 class="title">Chromsome Evolution (2023-Present)</h4>
+            <h4 class="title">Population Genetics (2023-Present)</h4>
             <p class="description">Comparing mammalian PAR size and aneuploidy rates. Simulating impact of drift and selection among populations with skewed sex ratios. 
 			</p>
           </div>
