--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Priscilla Glenn</h1>
-      <p>I'm a <span class="typed" data-typed-items="Geneticist, Writer, Biologist,Runner"></span></p>
+      <p>I'm a <span class="typed" data-typed-items="Geneticist, Reader, Breeder, Writer, Biologist,Runner"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -100,7 +100,7 @@
 
         <div class="section-title">
           <h2>About - Plant Geneticist/Agronomist</h2>
-          <p>Hi, my name is Dr. Priscilla Glenn and I am currently a Post-doc in the Blackmon Lab at Texas A&M University researching aneuploidy and fitness and striving to improve my bioinformatic abilities. 
+          <p>Hi, my name is Dr. Priscilla Glenn and I am currently a Post-doc in the Mullet lab at Texas A&M University, studying bioenergy sorghum. I am creating a public compendium of our RNA data and researching genes within the flowering pathway. 
 		  I graduated with my doctorate from UC Davis and my research focused on identifying and incorporating alleles to improve wheat yield.
 		   I desire to uncover the connection between genetic variation, desirable phenotypic traits, and varying field environments. 
 			  Utilizing both tradition breeding methods and genomic selection, I am driven to apply these traits to advance genetic gain and phenotypic improvements to suit the grower’s needs. 
@@ -119,7 +119,7 @@
             <div class="row margin">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>priscilla_glenn@outlook.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>priscilla.glenn@ag.tamu.edu</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>LinkedIn</strong> <span>www.linkedin.com/in/priscilla-d-glenn/</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Position</strong> <span> A&M Postdoctoral Associate</span></li>
                 </ul>
@@ -194,10 +194,16 @@
         </div>
 
         <div class="row">
+		<div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
+            <image class="icon" src="/assets/img/icons/green-power.png"/>
+            <h4 class="title">Bioenergy Sorghum (2023)</h4>
+            <p class="description">Compiling a compendium of RNA data and elucidating the flowering time pathway. 
+			</p>
+          </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
             <image class="icon" src="/assets/img/icons/dna2.png"/>
-            <h4 class="title">Population Genetics (2023-Present)</h4>
-            <p class="description">Comparing mammalian PAR size and aneuploidy rates. Simulating impact of drift and selection among populations with skewed sex ratios. 
+            <h4 class="title">Population Genetics (2023)</h4>
+            <p class="description">Analyzed single-cell ATAC data for sperm aneuploidy rates. Simulating impact of drift and selection among populations with skewed sex ratios. 
 			</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
