--- a/index.html
+++ b/index.html
@@ -278,7 +278,9 @@
 		  <p> 3) <b>Glenn P,</b> Hjelmen CJ, Gafford-Gaby RD, Shum A, Blackmon H. (2023). The fitness of the rare sex is destined to decline.
 		  (in prep, PNAS)
 		  </p>
-		  
+		  <p>
+		  --- Other ---
+		  </p>
 		  <p> Host of the WheatCAP Fall 2020 Webinar Series, "Wheat Breeding from Plow-to-Plate". These educational videos can be found <b> <a href="https://triticeaecap.ucdavis.edu/2020-webinar-series"
 		   target="_blank"> HERE </a> and cover a range of topics.</b>
 		  </p>
