--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
             <image class="icon" src="/assets/img/icons/dna2.png"/>
             <h4 class="title">Population Genetics (2023)</h4>
-            <p class="description">Analyzed single-cell ATAC data for sperm aneuploidy rates. Simulating impact of drift and selection among populations with skewed sex ratios. 
+            <p class="description">Analyzed single-cell ATAC data for sperm aneuploidy rates. Simulated the impact of drift and selection among populations with skewed sex ratios. 
 			</p>
           </div>        
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
