--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 		  --- Other ---
 		  </p>
 		  <p> Host of the WheatCAP Fall 2020 Webinar Series, "Wheat Breeding from Plow-to-Plate". These educational videos can be found <b> <a href="https://triticeaecap.ucdavis.edu/2020-webinar-series"
-		   target="_blank"> HERE </a> and cover a range of topics.</b>
+		   target="_blank"> HERE </a></b> and cover a range of topics.
 		  </p>
 		  
 		  
