--- a/index.html
+++ b/index.html
@@ -335,17 +335,20 @@
                   <li><i class="bi bi-chevron-right"></i> R & RStudio - advanced </li>
                   <li><i class="bi bi-chevron-right"></i> Python - intermediate </li>
                   <li><i class="bi bi-chevron-right"></i> Perl - beginner </li>
+				  <li><i class="bi bi-chevron-right"></i> SQL - beginner </li>
                 </ul>
               </div>
               <div class="col-lg-4">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> Phylogenetic analysis</li>
+                  <li><i class="bi bi-chevron-right"></i> Differential Expression</li>
+				  <li><i class="bi bi-chevron-right"></i> Phylogenetic analysis</li>
                   <li><i class="bi bi-chevron-right"></i> Mesquite</li>
 				  <li><i class="bi bi-chevron-right"></i> MrBayes </li>
                 </ul>
               </div>
 			  <div class="col-lg-4">
                 <ul>
+				  <li><i class="bi bi-chevron-right"></i> Gene Ontology </li>	
 				  <li><i class="bi bi-chevron-right"></i> Microsoft Excel </li>			
                   <li><i class="bi bi-chevron-right"></i> Adobe Illustrator</li>
                   <li><i class="bi bi-chevron-right"></i> Adobe Photoshop</span></li>
