--- a/index.html
+++ b/index.html
@@ -120,15 +120,16 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>priscilla.glenn@ag.tamu.edu</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>LinkedIn</strong> <span>www.linkedin.com/in/priscilla-d-glenn/</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Position</strong> <span> A&M Postdoctoral Associate</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>LinkedIn:</strong> <span><b> <a href="www.linkedin.com/in/priscilla-d-glenn/" target="_blank">
+		  www.linkedin.com/in/priscilla-d-glenn/ </a> </b></span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Position:</strong> <span> A&M Postdoctoral Associate</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Hobbies</strong> <span> Crochet, Reading, DND, Board games, Video games</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Interests </strong> <span>Dragons, Cats, King Arthur, Star Wars & Star Trek</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City</strong> <span>College Station, TX</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Hobbies:</strong> <span> Crochet, Reading, DND, Board games, Video games</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Interests: </strong> <span>Dragons, Cats, King Arthur, Star Wars & Star Trek</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>College Station, TX</span></li>
                 </ul>
               </div>
             </div>
