--- a/index.html
+++ b/index.html
@@ -280,9 +280,9 @@
 		  (in prep, PNAS)
 		  </p>
 		  <p>
-		  --- Other ---
+		  <h3>--- Other ---</h3>
 		  </p>
-		  <p> Host of the WheatCAP Fall 2020 Webinar Series, "Wheat Breeding from Plow-to-Plate". These educational videos can be found <b> <a href="https://triticeaecap.ucdavis.edu/2020-webinar-series"
+		  <p> Host of the WheatCAP Fall 2020 Webinar Series, <b>"Wheat Breeding from Plow-to-Plate"</b>. These educational videos can be found <b> <a href="https://triticeaecap.ucdavis.edu/2020-webinar-series"
 		   target="_blank"> HERE </a></b> and cover a range of topics.
 		  </p>
 		  
