--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 		  Identification and characterization of a natural polymorphism in <i> FT-A2 </i> associated with increased number of grains per spike in wheat. 
 		  <i> Theoretical and Applied Genetics, 135, </i> 679–692. <a href="https://doi.org/10.1007/s00122-021-03992-y" target="_blank">
 		  https://doi.org/10.1007/s00122-021-03992-y </a> 
-		  <p> 3) 3)	Lamb A, Kurtz E, <b> Glenn P, </b> McKinley B, Mullet J. (2024). Bioenergy Sorghum Nodal Root Bud Development: Morphometric, Transcriptomic and Gene Regulatory Network Analysis. 
+		  <p> 3) Lamb A, Kurtz E, <b> Glenn P, </b> McKinley B, Mullet J. (2024). Bioenergy Sorghum Nodal Root Bud Development: Morphometric, Transcriptomic and Gene Regulatory Network Analysis. 
 		  (Submitted to Frontiers in Plant Science)
 		  </p>
 		  <p> 4) <b>Glenn P,</b> Hjelmen CJ, Gafford-Gaby RD, Shum A, Blackmon H. (2023). The fitness of the rare sex is destined to decline.
