--- a/index.html
+++ b/index.html
@@ -209,12 +209,12 @@
           </div>        
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
             <image class="icon" src="/assets/img/icons/capitol.png"/>
-            <h4 class="title"> Congressional Visit</h4>
+            <h4 class="title"> Congressional Visit (2022) </h4>
             <p class="description">Advocated successfully to CA senators & representatives to continue funding the Agriculture & Food Research Initiative </p>
           </div>
 		  <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
 			<image class="icon" src="/assets/img/icons/wheat.png"/>
-            <h4 class="title">FT-A2 / bZIPC1 (2017-2022)</h4>
+            <h4 class="title">FT-A2 / bZIPC1 <p> (2017-2022) </p> </h4>
             <p class="description">Improved wheat yield potential by identifying, characterizing, and incorporating an 
 			<i>FT2</i> allele and it's interacter for increased grain number.</p>
           </div>
