--- a/index.html
+++ b/index.html
@@ -237,7 +237,8 @@
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
             <image class="icon" src="/assets/img/icons/fire.png"/> 
-            <h4 class="title">Fire Blight (Summer 2016)</h4>
+            <h4 class="title">Fire Blight
+			<p>	(Summer 2016) </p> </h4>
             <p class="description">Determined if Fire Blight was attractive to <i>D. Melanogaster</i> and 
 			set up procedure for future experiments for other potential FB vectors</p>
           </div>
