--- a/index.html
+++ b/index.html
@@ -214,8 +214,7 @@
           </div>
 		  <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
 			<image class="icon" src="/assets/img/icons/wheat.png"/>
-            <h4 class="title">FT-A2 / bZIPC1 
-			<p> (2017-2022) </p> </h4>
+            <h4 class="title">FT-A2 / bZIPC1 (2017-2022)</h4>
             <p class="description">Improved wheat yield potential by identifying, characterizing, and incorporating an 
 			<i>FT2</i> allele and it's interacter for increased grain number.</p>
           </div>
@@ -237,8 +236,7 @@
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
             <image class="icon" src="/assets/img/icons/fire.png"/> 
-            <h4 class="title">Fire Blight
-			<p>	(Summer 2016) </p> </h4>
+            <h4 class="title">Fire Blight (Summer 2016)</h4>
             <p class="description">Determined if Fire Blight was attractive to <i>D. Melanogaster</i> and 
 			set up procedure for future experiments for other potential FB vectors</p>
           </div>
