--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Research Experience</h2>
+          <h2>Experience</h2>
           <p>   </p>
         </div>
 
