--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Priscilla Glenn</h1>
-      <p>I'm a <span class="typed" data-typed-items="Geneticist, Reader, Breeder, Writer, Biologist,Runner"></span></p>
+      <p>I'm a <span class="typed" data-typed-items="Geneticist, Reader, Agronomist, Writer, Biologist, Runner"></span></p>
     </div>
   </section><!-- End Hero -->
 
