--- a/index.html
+++ b/index.html
@@ -267,10 +267,10 @@
 		
         <div class="row no-gutters">
           <div class="align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
-		  <p> 1) Lamb A, Kurtz E, <b> Glenn P, </b> McKinley B, Mullet J. (2024). Bioenergy Sorghum Nodal Root Bud Development: Morphometric, Transcriptomic and Gene Regulatory Network Analysis. 
+		  <p> 1) Lamb A, Kurtz E, <b> Glenn P,</b> McKinley B, Mullet J. (2024). Bioenergy Sorghum Nodal Root Bud Development: Morphometric, Transcriptomic and Gene Regulatory Network Analysis. 
 		  <i> Frontiers in Plant Science, 15 </i>. <a href="https://doi.org/10.3389/fpls.2024.1456627" target="_blank">
 		  https://doi.org/10.3389/fpls.2024.1456627</a>
-		  <p> 2) <b>Glenn P,</b> Woods DP, Zhang J, Gabay G, Odle N, Dubcovsky J. (2023)
+		  <p> 2) <b>Glenn P,</b> Woods DP, Zhang J, Gabay G, Odle N, Dubcovsky J. (2023).
 		  Wheat bZIPC1 interacts with FT2 and contributes to the regulation of spikelet number per spike. <i> Theoretical and Applied Genetics, 136, </i> 237. 
 		  <a href="https://doi.org/10.1007/s00122-023-04484-x" target="_blank"> https://doi.org/10.1007/s00122-023-04484-x </a>
 		  </p>
@@ -278,10 +278,12 @@
 		  Identification and characterization of a natural polymorphism in <i> FT-A2 </i> associated with increased number of grains per spike in wheat. 
 		  <i> Theoretical and Applied Genetics, 135, </i> 679–692. <a href="https://doi.org/10.1007/s00122-021-03992-y" target="_blank">
 		  https://doi.org/10.1007/s00122-021-03992-y </a> 
-
 		  </p>
-		  <p> 4) <b>Glenn P,</b> Hjelmen CJ, Gafford-Gaby RD, Shum A, Blackmon H. (2025). The fitness of the rare sex is destined to decline.
-		  (in prep, PNAS)
+		  <p> 4) Yu KMJ, Weers B, McKinley B, <b>Glenn P,</b> Kurtz E, Rooney W, Mullet J. (2025). Increased bioenergy sorghum stem density after internode elongation is due to accumulation of 
+		  lignified cell walls and complex regulation of cell wall biosynthesis gene expression. <i>(in prep, Biotechnol. Biofuels)</i>
+		  </p>
+		  <p> 5) <b>Glenn P,</b> Hjelmen CJ, Gafford-Gaby RD, Shum A, Blackmon H. (2025). The fitness of the rare sex is destined to decline.
+		  <i>(in prep, PNAS)</i>
 		  </p>
 		  <p> </p>
 		  <p>
