--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Priscilla Glenn, Ph.D</title>
+  <title>Priscilla Glenn Doupnik, Ph.D</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -87,7 +87,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
-      <h1>Priscilla Glenn</h1>
+      <h1>Priscilla Glenn Doupnik</h1>
       <p>I'm a <span class="typed" data-typed-items="Geneticist, Reader, Agronomist, Writer, Biologist, Runner"></span></p>
     </div>
   </section><!-- End Hero -->
@@ -100,7 +100,7 @@
 
         <div class="section-title">
           <h2>About - Plant Geneticist/Agronomist</h2>
-          <p>Hi, my name is Dr. Priscilla Glenn and I am currently a Post-doc in the Mullet lab at Texas A&M University, studying bioenergy sorghum. I am creating a public compendium of our RNA data and researching genes within the flowering pathway. 
+          <p>Hi, my name is Dr. Priscilla Glenn Doupnik and I am currently a Post-doc in the Mullet lab at Texas A&M University, studying bioenergy sorghum. I am creating a public compendium of our RNA data and researching genes within the flowering pathway. 
 		  I graduated with my doctorate from UC Davis and my research focused on identifying and incorporating alleles to improve wheat yield.
 		   I desire to uncover the connection between genetic variation, desirable phenotypic traits, and varying field environments. 
 			  Utilizing both tradition breeding methods and genomic selection, I am driven to apply these traits to advance genetic gain and phenotypic improvements to suit the grower’s needs. 
