--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
       <div class="profile">
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Priscilla Glenn, Ph.D</a></h1>
+        <h1 class="text-light"><a href="index.html">Priscilla Glenn Doupnik, Ph.D</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://twitter.com/thewheatgrad" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="mailto:priscilla_glenn@outlook.com"><i class="bx bxl-gmail"></i></a>
