--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <header id="header">
     <div class="d-flex flex-column">
 
-      <div class="profile">
+      <div class="profile" style="text-align: center;">
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Priscilla Glenn Doupnik, Ph.D</a></h1>
         <div class="social-links mt-3 text-center">
