--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <a href="https://twitter.com/thewheatgrad" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="mailto:priscilla_glenn@outlook.com"><i class="bx bxl-gmail"></i></a>
           <a href="https://github.com/priscilla-glenn"><i class="bx bxl-github"></i></a>
-          <a href="https://www.linkedin.com/in/priscilla-d-glenn/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/priscilla-glenn-doupnik/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
@@ -120,8 +120,8 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>priscilla.glenn@ag.tamu.edu</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>LinkedIn:</strong> <span><b> <a href="www.linkedin.com/in/priscilla-d-glenn/" target="_blank">
-		  www.linkedin.com/in/priscilla-d-glenn/ </a> </b></span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>LinkedIn:</strong> <span><b> <a href="https://www.linkedin.com/in/priscilla-glenn-doupnik/" target="_blank">
+		 www.linkedin.com/in/priscilla-glenn-doupnik/ </a> </b></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Position:</strong> <span> A&M Postdoctoral Associate</span></li>
                 </ul>
               </div>
